--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,7 +2,13 @@ doctype html
 html
   head
     title= title
-    link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous")
-    link(rel='stylesheet', href='/css/style.css')
+    //link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous")
+    link(rel='stylesheet' href='/css/bootstrap.min.css')
+    link(rel='stylesheet' href='/css/bootstra-theme.min.css')
+    link(rel='stylesheet' href='/css/style.css')
+    
   body
     block content
+    script(src='/js/bootstrap.min.js')
+    script(src='/js/jquery.min.js')
+    script(src='/js/scripts.js')
