--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -1,3 +1,83 @@
 extends ./template/layout
 block content
-  h3 Dashboard content here
+  <div class="container">
+    <div class="row ">
+      <div class="col-xs-6">
+        <p>  <h4>  Patient Basic Information  </h4> </p>
+          <table class="table table-active" style="background:verylightgrey" style="align:justify">
+            <tbody>
+              <tr>
+                <th scope="row">First Name</th>
+                <td>Mark</td>
+              </tr>
+              <tr>
+                <th scope="row">Last Name</th>
+                <td>Green</td>
+              </tr>
+              <tr>
+                <th scope="row">Identity Number</th>
+                <td>Y04992 (0)</td>
+              </tr>
+              <tr>
+                <th scope="row">Age</th>
+                <td>34</td>
+              </tr>
+              <tr>
+                <th scope="row">Gender</th>
+                <td>Male (0)</td>
+              </tr>
+              <tr>
+                <th scope="row">Blood Type</th>
+                <td>B+</td>
+              </tr>
+              <tr>
+                <th scope="row"></th>
+                <td></td>
+              </tr>
+            </tbody>
+          </table>
+      </div>
+  </div>
+  
+  <div class="container">
+    <div class="row ">
+      <div class="col-xs-6">
+        <p>  <h4>  History of Illness  </h4> </p>
+          <table class="table">
+            <thead>
+              <tr>
+                <div align="right"> <b>Date:</b> 23rd January, 2017</div>              
+                <div><b>Diagnosed By:</b> Peter Ho</div>
+                <div> <b>Hospital: </b>Queens Mary Hospital Ho</div>
+              </tr>
+            </thead>
+            <tbody>
+              <table class="table" style="align-self:center">
+                <thead class="thead-default">
+                  <th> Symptoms</th>
+                  <th> Diagnostics </th>
+                  <th> Treatment</th>
+
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>Dizziness, Headache, Fever</td>
+                    <td>Rapid Influenza Diagnostic Test</td>
+                    <td>Oseltamivir-2mg</td>
+                  </tr>
+                  <tr>
+                    <th scope="row"></th>
+                    <td></td>
+                  </tr>
+                </tbody>
+              </table>
+                
+            </tbody>
+          </table>
+      </div>
+  </div>
+  
+
+   
+
+   
