--- a/views/phone_index.pug
+++ b/views/phone_index.pug
@@ -3,3 +3,20 @@ block content
   h3
   .center
   | Welcome to Medchain
+  <meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+  <img src="img/report.png" height="42" width="42">
+
+  <table class="table borderless" style="background-color: LightSteelBlue; ">
+	  <tbody>
+		<tr>
+	  <td class="login_label text-center "><label><span class="glyphicon glyphicon-lock" ></span></label></td>
+		<td><input ng-model="txtPassword" type="password" placeholder="Password"></td>
+		</tr>  
+    </tbody>
+	</table>
+
+  h5
+  .center
+  | or
+  <img src="img/fingerprint.png" href="/" height="42" width="42">
