--- a/views/login.pug
+++ b/views/login.pug
@@ -1,16 +1,12 @@
 extends ./template/layout
 block content
-  <meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-  h5
+  h3
   .center
   | Welcome to Medchain
-  <img src="img/" height="42" width="42">
-  <style>
-	  	body {
-			  background-color: MidnightBlue;
-		  }
-	</style>
+  <meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+  //<h5 align="center">Welcome to Medchain</h5>
+  <img src="img/report.png" height="42" width="42">
 
   <table class="table borderless" style="background-color: LightSteelBlue; ">
 	  <tbody>
@@ -24,8 +20,7 @@ block content
   h5
   .center
   | or
-  <img src="img/" height="42" width="42">
-  Fingerprint Access
+  <img src="img/fingerprint.png" href="/" height="42" width="42">
 
 
 
