--- a/views/phone_index.pug
+++ b/views/phone_index.pug
@@ -3,14 +3,19 @@ block content
   <h3 align="center">Welcome to Medchain</h3>
   <img src="img/report.png" height="42" width="42">
 
-    <table class="table borderless" style="background-color: LightSteelBlue; ">
-	  <tbody>
-		<tr>
-	  <td class="login_label text-center "><label><span class="glyphicon glyphicon-lock" ></span></label></td>
-		<td><input ng-model="txtPassword" type="password" placeholder="Password"></td>
-		</tr>  
-    </tbody>
-	  </table>
+  <table class="table borderless" style="background-color: LightSteelBlue; ">
+  	<tr>
+	    <td class="login_label text-center ">
+        <label>
+          <span class="glyphicon glyphicon-lock" >
+          </span>
+        </label>
+      </td>
+	    <td>
+        <input ng-model="txtPassword" type="password" placeholder="Password">
+      </td>
+	  </tr>  
+	</table>
 
   <h5>or</h5>
   <img src="img/fingerprint.png" href="/" height="42" width="42">
