--- a/views/phone_index.pug
+++ b/views/phone_index.pug
@@ -1,19 +1,25 @@
 extends ./template/layout
 block content
-<h3 align="center">Welcome to Medchain</h3>
-<img src="img/report.png" height="42" width="42">
-<table class="table borderless" style="background-color: LightSteelBlue; ">
-  <tr>
-    <td class="login_label text-center ">
-      <label>
-        <span class="glyphicon glyphicon-lock" >
-        </span>
-      </label>
-    </td>
-    <td>
-      <input ng-model="txtPassword" type="password" placeholder="Password">
-    </td>
-  </tr>  
-</table>
-<h5>or</h5>
-<img src="img/fingerprint.png" href="/" height="42" width="42">
+  <h5 align="center">Welcome to Medchain</h3>
+  <p align="center">
+    <img src="img/report.png" height="200px" width="150px">
+  </p>
+  <table class="table borderless" style="background-color: LightSteelBlue;" align="center">
+    <tr align="center">
+      <td class="login_label text-center" align="center">
+        <label>
+          <span class="glyphicon glyphicon-lock" align="center">
+          </span>
+        </label>
+      </td>
+      <td>
+        <input ng-model="txtPassword" type="password" placeholder="Password" align="center">
+      </td>
+    </tr>  
+  </table>
+  <p align="center">
+    <h5 align="center">or</h5>
+  </p>
+  <p>
+    <img src="img/fingerprint.png" href="/patientfunction" height="42" width="42">
+  </p>
