--- a/views/phone_index.pug
+++ b/views/phone_index.pug
@@ -6,20 +6,19 @@ block content
   </p>
   <table class="table borderless" style="background-color: LightSteelBlue;" align="center">
     <tr align="center">
-      <td class="login_label text-center" align="center">
-        <label>
-          <span class="glyphicon glyphicon-lock" align="center">
-          </span>
-        </label>
-      </td>
       <td>
-        <input ng-model="txtPassword" type="password" placeholder="Password" align="center">
+        <input type="password" placeholder="Password" align="center">
       </td>
     </tr>  
   </table>
   <p align="center">
     <h5 align="center">or</h5>
   </p>
-  <p>
-    <img src="img/fingerprint.png" href="/patientfunction" height="42" width="42">
-  </p>
+  <div class="row" align="center">
+    <div class="col-xs-6 col-md-6" align="center">
+    <img src="img/fingerprint.png" href="/patientfunction" height="42" width="42" align="center">
+    </div>
+    <div class="col-xs-6 col-md-6" align="center">
+      Fingerprint Access
+    </div>
+  </div>
