--- a/views/patientfunction.pug
+++ b/views/patientfunction.pug
@@ -11,7 +11,7 @@ block content
             | <b>Address: </b> a67934794<br/> <br/>
             <div align="center">
           
-            <a href="" class="btn btn-outline-primary btn-sm " role="button" >Pending Transfer Requests!</a>
+            <href="/pendingrequests" class="btn btn-outline-primary btn-sm " role="button" >Pending Transfer Requests!</a>
             <a href="" class="btn btn-outline-primary btn-sm " role="button" >Transfer History!</a>
             <a href="patient" class="btn btn-outline-primary btn-sm " role="button" >Medical History!</a>
 
