--- a/views/phone_index.pug
+++ b/views/phone_index.pug
@@ -15,10 +15,10 @@ block content
     <h5 align="center">or</h5>
   </p>
   <div class="row" align="center">
-    <div class="col-xs-6 col-md-6" align="center">
-    <img src="img/fingerprint.png" href="/patientfunction" height="42" width="42" align="center">
+    <div class="col-xs-2 col-md-6" align="center">
+    <a  href="/patientfunction" align="center"><img src="img/fingerprint.png" height="42" width="42" align="center"></a>
     </div>
-    <div class="col-xs-6 col-md-6" align="center">
+    <div class="col-xs-2 col-md-6" align="center">
       Fingerprint Access
     </div>
   </div>
