--- a/views/template/navbar.pug
+++ b/views/template/navbar.pug
@@ -8,8 +8,10 @@ mixin header
     #nav-content.collapse.navbar-collapse
       ul.navbar-nav
         li.nav-item
-          a.nav-link(href="/dashboard") Dashboard
+          a.nav-link(href="/dashboard") Doctor Dashboard
         li.nav-item
-          a.nav-link(href="/requests") Requests  
+          a.nav-link(href="/requests") Doctor Requests  
         li.nav-item
-          a.nav-link(href="/patient") Patient
+          a.nav-link(href="/patientfunction") Patient Dashboard
+        li.nav-item
+          a.nav-link(href="/patient") Patient Profile
