my_final_output

--- a/views/patientfunction.pug
+++ b/views/patientfunction.pug
@@ -10,10 +10,9 @@ block content
             | <b>Age: </b>     46 <br/>
             | <b>Address: </b> a67934794<br/> <br/>
             <div align="center">
-          
-            <href="/pendingrequests" class="btn btn-outline-primary btn-sm " role="button" >Pending Transfer Requests!</a>
+            <a href="/pendingrequests" class="btn btn-outline-primary btn-sm " role="button" >Pending Transfer Requests!</a>
             <a href="" class="btn btn-outline-primary btn-sm " role="button" >Transfer History!</a>
-            <a href="patient" class="btn btn-outline-primary btn-sm " role="button" >Medical History!</a>
+            <a href="/patient" class="btn btn-outline-primary btn-sm " role="button" >Medical History!</a>
 
 
 
