--- a/views/template/navbar.pug
+++ b/views/template/navbar.pug
@@ -3,7 +3,7 @@ mixin header
     button.navbar-toggler(type="button" data-toggle="collapse" data-target="#nav-content" aria-controls="nav-content" aria-expanded="false" aria-label="Toggle navigation")
       span.navbar-toggler-icon
     // Brand
-    a.navbar-brand(href="/") Healthchain Testnet
+    a.navbar-brand(href="/") Healthchain Demo
     // Links
     #nav-content.collapse.navbar-collapse
       ul.navbar-nav
