--- a/views/requests.pug
+++ b/views/requests.pug
@@ -5,7 +5,7 @@ block content
     .container
       .row
         .col-md-8
-          h3 Request History
+          h3 Doctor - Request History
         .col-md-2
           a.btn.btn-primary.float-right(href='/requests/new' role="button") New Entry
         .col-md-2
